crates/credential/tests/probes/scheme_sensitivity_plain_string.stderr
error: field `token` on #[auth_scheme(sensitive)] struct must be SecretString or SecretBytes (plain String for a secret-named field is a leak risk per Tech Spec §15.5)
  --> tests/probes/scheme_sensitivity_plain_string.rs:11:5
   |
11 |     pub token: String, // plain String for sensitive-tagged field — REJECT
   |     ^^^
